# B-timentPr-dictif

./: .gitignore  P3_template_analyse_data.ipynb  P3_template_model.ipynb  P3_template_model_SiteEnergy.ipynb  P3_template_model_Total.ipynb  P3_template_modelistation_supervisee_data_scientist.ipynb  README.md  building.joblib  pyproject.toml
